# xmBench

./: .gitignore  xmperf.jks  xmperf.unitypackage
Android/: .gitignore  Android.mk  AndroidManifest.xml  README.md  build.gradle  build.properties
Android/debug/: Android-debug.apk  output.json
Android/gradle/wrapper/: gradle-wrapper.properties
Android/native/: CMakeLists.txt
Android/native/libCRender/: Matrix.cpp  Matrix.h  org_crender_NDKGlRender.c  org_crender_NDKGlRender.cpp  org_crender_NDKGlRender.h  org_crender_NDKGlRender_gles2.cpp
Android/release/: Android-release.apk  output.json
Android/res/drawable/: ic_info.xml
Android/res/layout/: activity_sys_info.xml  gc.xml  upload.xml
Android/res/values/: strings.xml
Android/src/com/sys/info/: BridgeCpuProvider.java  CpuInfoProvider.java  GLinfoProvider.java  SysInfoActivity.java  SysInfoProvider.java
Android/src/jnt/scimark2/: commandline.java  kernel.java
Android/src/org/crender/: NDKGlRender.java  NdkGlActivity.java
Android/src/org/itri/teapot/: MyGLSurfaceView.java  TeapotES.java  TeapotRenderer.java
Android/src/org/zeroxlab/benchmark/: ActivitySettings.java  Benchmark.java  Case.java  CaseArithmetic.java  CaseCanvas.java  CaseDrawArc.java  CaseDrawCircle.java  CaseDrawCircle2.java  CaseDrawImage.java  CaseDrawRect.java  CaseDrawText.java  CaseGC.java  (+21 more)
bridge/app/: build.gradle
bridge/app/libs/: classes.dex
bridge/app/src/main/: AndroidManifest.xml
bridge/gradle/wrapper/: gradle-wrapper.properties
bridge/mylibrary/: build.gradle
bridge/mylibrary/src/main/: AndroidManifest.xml
(+26 files in other folders)
